# EY-Initial-Margin

./: .gitignore  README.md  analysis_forward_im_profile.ipynb  analysis_jlsmc.ipynb  analysis_jpmmc.ipynb  analysis_moments_regression.ipynb  examples.ipynb  forward_im_models.py  jlsmc_study.ipynb  moments_regression.ipynb  notebook.ipynb  pricing_engines.py  pricing_models.py  pyproject.toml  regressors.py  requirements.txt  stylized_graphs.ipynb  tutorial.ipynb  utils.py
analyses/: analysis_forward_im_profile.ipynb  analysis_jlsmc.ipynb  analysis_jpmmc.ipynb  analysis_moments_regression.ipynb
analyses/results_forward_im_profile/put_bs/: bench_im_gauss_johnson.csv
backend/: as99.py  forward_im_models.py  pricing_engines.py  regressors.py  utils.py
least_squares_mc/: as99.py  im_test_nmc.csv  im_train_nmc.csv  johnson moments matching.ipynb  johnson percentiles matching.ipynb  moments regression.ipynb  notebook.ipynb  utils.py  value at risk profile.ipynb
least_squares_mc/moments_paramreg/: moments_paramreg_study.ipynb
least_squares_mc/put_blackscholes/: johnson_mm_fitting.py  put_blackscholes_study copy.ipynb  put_blackscholes_study.ipynb
least_squares_mc/results/: im_glsmc.csv  im_jlsmc.csv
least_squares_mc/results_10k/: im_glsmc.csv  im_jlsmc.csv
others/: stylized graphs.ipynb  stylized_graphs.ipynb
results_forward_im_profile/put_bs/: bench_im_neural_net.csv
results_forward_im_profile/swaption_hw1f/: bench_im_gauss_johnson.csv  bench_im_neural_net.csv
